# telegram-to-google-bot

./: .dockerignore  .env.example  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/clients/: google_chat_webhook_client.py  interfaces.py  telegram_client.py
src/config/: logging_config.py  settings.py
src/exceptions/: base.py  google_chat_errors.py  telegram_errors.py
src/handlers/: message_handler.py
src/models/: message.py
src/server/: health_server.py
src/services/: forwarder.py
tests/: conftest.py
tests/e2e/: test_bot_e2e.py
tests/integration/: test_forwarder_integration.py
tests/unit/: test_forwarder.py  test_google_chat_webhook_client.py  test_health_server.py  test_logging_config.py  test_main.py  test_message_handler.py  test_models.py  test_settings.py  test_telegram_client.py
