[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-to-google-bot"
version = "1.0.0"
description = "Forwards Telegram messages to Google Chat"
requires-python = ">=3.14"
dependencies = [
    "pyTelegramBotAPI>=4.20",
    "requests>=2.31",
    "flask>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pass",
    "@abstractmethod",
]
